add type var for agent instance params model
fix quptes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-authors = [Occam AI <support@occam.ai>, Mo <mo@occam.ai>, Ahmed <ahmed@occam.ai>"]
+authors = ["Occam AI <support@occam.ai>, Mo <mo@occam.ai>, Ahmed <ahmed@occam.ai>"]
 description = "Repo containing the open core components and capabilities of Occam AI's tools and agents"
 name = "occam_core"
 version = "0.1.0.dev2"
